# gerrit_mq

./: .gitignore  README.md  README.rst  setup.py
gerrit_mq/: CMakeLists.txt  README.md  TODO.md  __init__.py  __main__.py  common.py  daemon.py  functions.py  master.py  orm.py  webfront.py
gerrit_mq/doc/: CMakeLists.txt  README.rst  changelog.rst  design_notes.rst  index.rst  modules.rst  todo.rst
gerrit_mq/pages/: daemon.html  detail.html  history.html  index.html  queue.html
gerrit_mq/pypi/: setup.py
gerrit_mq/samples/: gerrit_mq.nginx  mq_daemon.service  mq_webfront.service  mqconfig.py
gerrit_mq/templates/: daemon.html.tpl  detail.html.tpl  detail_body.html.tpl  history.html.tpl  index.html.tpl  layout.html.tpl  queue.html.tpl  script.js.tpl  style.css
gerrit_mq/test/: __main__.py  automation.py  config.py  gerrit_docker.py  mqconfig.py  nginx_fg.conf
gerrit_mq/test/docker/: Dockerfile.tpl  all_projects.config  gerrit.config  init_gerrit.py  secure.config  start.sh
gerrit_mq/tools/: __main__.py
